up thống kê web đang fix

--- a/form/qltdl/qltdl_web/Views/Home/Index.cshtml
+++ b/form/qltdl/qltdl_web/Views/Home/Index.cshtml
@@ -36,4 +36,8 @@
         <h2>Phiếu trả tiền</h2>
         <p><a class="btn btn-default" href="~/CTTTs/index">Phiếu trả tiền &raquo;</a></p>
     </div>
+    <div class="col-md-4">
+        <h2>Thống kê nhân viên đi tour</h2>
+        <p><a class="btn btn-default" href="~/tknhanvien/index">Thống kê &raquo;</a></p>
+    </div>
 </div>
