--- a/form/qltdl/qltdl_web/Views/DOANDLs/Create.cshtml
+++ b/form/qltdl/qltdl_web/Views/DOANDLs/Create.cshtml
@@ -18,7 +18,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.IDT, "Tên tour", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("model.IDT", ViewBag.IDT as SelectList ,htmlAttributes: new { @class = "form-control" })
+                @Html.DropDownList("IDT", ViewBag.IDT as SelectList ,htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.IDT, "", new { @class = "text-danger" })
             </div>
         </div>
