--- a/form/qltdl/qltdl_web/Views/CTTTs/Create.cshtml
+++ b/form/qltdl/qltdl_web/Views/CTTTs/Create.cshtml
@@ -42,7 +42,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.THANHTIEN,"Thành tiền", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.THANHTIEN, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.THANHTIEN, new { htmlAttributes = new { @type = "number", @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.THANHTIEN, "", new { @class = "text-danger" })
             </div>
         </div>
