thống kê nhân viên đi tour done

--- a/form/qltdl/qltdl_web/Views/DOANDLs/Details.cshtml
+++ b/form/qltdl/qltdl_web/Views/DOANDLs/Details.cshtml
@@ -47,7 +47,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.TONGKINHPHI)
+            @Html.DisplayFor(model => model.TONGKINHPHI, "Currency")
         </dd>
 
     </dl>
