--- a/form/qltdl/qltdl_web/Views/CTTTs/Details.cshtml
+++ b/form/qltdl/qltdl_web/Views/CTTTs/Details.cshtml
@@ -23,7 +23,7 @@
         </dt>
 
         <dd>
-            @Html.DisplayFor(model => model.THANHTIEN)
+            @Html.DisplayFor(model => model.THANHTIEN, "Currency")
         </dd>
 
         <dt>
