--- a/form/qltdl/qltdl_web/Views/CTTTs/Index.cshtml
+++ b/form/qltdl/qltdl_web/Views/CTTTs/Index.cshtml
@@ -32,7 +32,7 @@
             @Html.DisplayFor(modelItem => item.NOIDUNG)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.THANHTIEN)
+            @Html.DisplayFor(modelItem => item.THANHTIEN, "Currency")
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.DOANDL.TENGOI)
